# Movie-Recommendation-Sytem

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
Movie_Recomm_System/Backend/: main.py
Movie_Recomm_System/Frontend/: app.py  eda_utility.py  prediction_utility.py  utilityfn.py
Movie_Recomm_System/dvc_pipeline/: 0_cleaning.py  1_creating_dataset.py  2_model.py  3_model.py
data/interim/: top_dict.json
data/raw/: new_movies_demo.csv
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
models/: cast.pkl  story.pkl
notebooks/: 1_creating_datasets.ipynb  2_model.ipynb
