[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Movie_Recomm_System"
version = "0.0.1"
description = "It is a movie recommendation system which can recommend movie differently on the basis of Scale,Story and Cast"
authors = [
  { name = "Pankaj Maulekhi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["Movie_Recomm_System"]
include = ["pyproject.toml", "Movie_Recomm_System/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Movie_Recomm_System"]
force-sort-within-sections = true

